# agritrust

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  fix_db.sql  next.config.ts  nhiemvu.docx  note_thay_doi_nguoi_1.md  package-lock.json  package.json  project_structure.md  test-crawler.ts  test-db.js  test-db.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/call/: page.tsx
app/dashboard/: page.tsx
app/login/: page.tsx
app/profile/: page.tsx
app/register/: page.tsx
components/: AgentationWrapper.tsx
components/dispute/: AgreeButtons.tsx  ApproveReportButtons.tsx  ConfirmReceiptButton.tsx  DisputeReportForm.tsx  SettlementProposal.tsx  TimeoutClaimButton.tsx  UploadEvidenceForm.tsx
components/negotiation/: ConfirmContractButton.tsx  DraftContractTable.tsx  (+2 more)
docs/: cho-nguoi-thu-3.md  interface-contract.md  p1-blockchain-handoff.md  phan_cong_nhiem_vu.md  tich-hop-vi-solana-phantom.md
hooks/: useAuth.tsx  useEscrow.ts  useWallet.ts
lib/: useLanguage.ts
programs/agritrust_escrow/: Cargo.toml
programs/agritrust_escrow/src/: errors.rs  lib.rs  state.rs
programs/agritrust_escrow/src/instructions/: claim_timeout.rs  confirm_receipt.rs  initialize.rs  mod.rs  resolve_partial.rs
scripts/: crawl-market-data.ts  crawl_prices.ts
supabase/: migrate_b2b_profile_fields.sql  migrate_profile_and_contact.sql  schema.sql  update_constraints.sql  update_profile_ui.sql
tests/: check_contract.ts  check_db.js  escrow.test.ts  runAll.ts  settlement.test.ts
types/: contract.ts  disputeReport.ts  escrowStatus.ts  profile.ts
(+38 files in other folders)
